update: sticky position function replaced by jq-scrollable

--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "zeta-dom-react": ">=0.3.1"
   },
   "peerDependencies": {
+    "jq-scrollable": "^1.12.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
+  },
+  "peerDependenciesMeta": {
+    "jq-scrollable": {
+      "optional": true
+    }
   },
   "keywords": [
     "html",
