--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@misonou/react-css-utils",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "",
   "main": "index.js",
   "type": "module",
   "author": "misonou",
   "license": "ISC",
   "repository": "github:misonou/react-css-utils",
+  "homepage": "https://misonou.github.io",
   "dependencies": {
     "jquery": "^3.5.0",
     "zeta-dom": ">=0.4.0",
